# Ealain

./: CMakeLists.txt  README.md
Ealain/: CMakeLists.txt  constraint.cpp  constraint.h  cost.h  cost.hpp  io.h  io.hpp  utils.cpp  utils.h  utils.hpp
Ealain/detection/: camera.cpp  camera.h  group.cpp  group.h  sensor.cpp  sensor.h  sensor.hpp  situated.cpp  situated.h
Ealain/map/: cuboid.h  cuboid.hpp  domain.cpp  domain.h  domain.hpp  geom.cpp  geom.h  instance.cpp  instance.h  plan.h  plan.hpp  projection.h  projection.hpp  raster.cpp  raster.h
co/: CMakeLists.txt  example_co.cpp
drift/: CMakeLists.txt  example_drift_bit.cpp  example_drift_num.cpp
mf/: CMakeLists.txt  example_mf.cpp
mo/: CMakeLists.txt  example_mo.cpp
so/: CMakeLists.txt  example_so.cpp
test/: CMakeLists.txt  t-bresenham.cpp  t-camera.cpp  t-rasterize-polygon.cpp  t-visibility.cpp
